# FISHFINDER

./: .gitignore  CLAUDE.md  README.md  database.rules.json  parse_pdf.py  scrape_eschmeyer.py
.github/workflows/: deploy.yml
fishfinder/: README.md  index.html  robots.txt  sitemap.xml
meta_analysis/: 01_discover_papers.py  02_download_pdfs.py  03_extract_text.py  04_analyze_names.js  05_summarize.py  06_make_figures.py  README.md  config.py  pyproject.toml  run_pipeline.py
meta_analysis/cache/: papers.json  summary.json  summary.md
meta_analysis/cache/figures/: captions.txt  table1_summary.csv  table2_issues.csv
meta_analysis/cache/results/: 0032d42faff54810.json  00da1fcaa95916f7.json  04e5333ede79f6a1.json  0523b7e98324dbb8.json  0a977bf867e883bb.json  0aabd33615204cae.json  111f1311439c7ad3.json  12000366ffc08add.json  122a046f106a76ea.json  13ddc6e9884a777f.json  189e6558340a816a.json  1a1dc23bd972cb07.json  1a3e60080734663d.json  211eed4fab252e34.json  2251a3a7a4462783.json  22d502283d739481.json  2387875ba916878a.json  2588bfa0f1c79b41.json  30b89b87d0dfaeaa.json  3dbdbdda0149ee5b.json  40f7774614049d27.json  41286b43658064ce.json  43fe3dfffca1d8f3.json  4a8fc146f48c9f59.json  4bc83b07e81eaaca.json  4f80b695c54672f8.json  5084e316ebcd28dc.json  5276908568e90251.json  5b09160f36463ba8.json  5cb6b82c8c1f3106.json  5cf95204d9b355b9.json  5ef35300a642109d.json  60b4083e31b23159.json  647e97ddc0bec2f6.json  69438a4574a2627d.json  6b076b4c03c66da9.json  6ea0f532ea203f9d.json  71236f7a1ccced82.json  717b239763e93a2c.json  73ca92283d39d2d8.json  (+55 more)
(+8 files in other folders)
