[project]
name = "fishfinder-meta-analysis"
version = "0.1.0"
description = "Automated literature pipeline that runs FISHFINDER against published fisheries papers to quantify nomenclatural errors in recent literature."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pymupdf>=1.24",
    "matplotlib>=3.9",
]
